--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.17.0",
+    "bcrypt": "^5.1.1",
     "bunyan": "^1.8.15",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "colors": "^1.4.0",
     "dotenv": "^16.4.5",
