--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "colors": "^1.4.0",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "graphviz": "^0.0.9",
     "madge": "^7.0.0",
@@ -42,6 +43,7 @@
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "unique-username-generator": "^1.3.0",
     "winston": "^3.13.1",
     "winston-color": "^1.0.0",
     "winston-daily-rotate-file": "^5.0.0"
