--- a/package.json
+++ b/package.json
@@ -35,12 +35,16 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "colors": "^1.4.0",
+    "crypto": "^1.0.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "graphviz": "^0.0.9",
     "madge": "^7.0.0",
     "nest-winston": "^1.9.7",
     "pg": "^8.12.0",
+    "qrcode": "^1.5.4",
+    "qrcode-with-logos": "^1.1.1",
+    "react-qrcode-logo": "^3.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "unique-username-generator": "^1.3.0",
